tests/ui/unconstrained-none.rs
// Issue #5062

fn main() {
    None; //~ ERROR type annotations needed [E0282]
}
